--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>vue-store</title>
-    <link rel="stylesheet" href="/static/animate.css">
+    <link rel="stylesheet" href="./static/animate.css">
     <style>
     @import 'https://fonts.googleapis.com/css?family=Montserrat:400,700';
     .animated {
